--- a/and-they-were-roommates.html
+++ b/and-they-were-roommates.html
@@ -5,44 +5,30 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>And They Were Roommates!</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <title>Thots that Think</title>
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/resets.css">
     <link rel="stylesheet" href="css/and-they-were-roommates.css">
 </head>
-<body>
-<!-- Navigation bar -->
-<nav class="navbar navbar-expand-lg">
-    <div class="and-twrl-nav container-fluid">
-        <a class="navbar-brand" href="#">& they were roommates</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavDropdown">
-            <ul class="navbar-nav d-flex gap-5">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">donate</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">schedules</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        roomie links
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">angel</a></li>
-                        <li><a class="dropdown-item" href="#">audrey</a></li>
-                        <li><a class="dropdown-item" href="#">youtube podcast</a></li>
-                    </ul>
-                </li>
-            </ul>
+
+<body class="page-wrapper">
+<navbar class ="navigation container">
+<div class ="row">
+    <div class="column">
+        <div class="nav d-flex full-width">
+        <h1 class="ttt-header">thots that think</h1>
+            <div class="nav-link-options d-flex justify-end">
+        <ul class="nav-options d-flex gap-20 justify-end">
+            <li class="nav-links"><a href ="#">Links</a></li>
+            <li class="nav-links"><a href ="#">Community</a></li>
+            <li class="nav-links"><a href ="#">About Us</a></li>
+        </div>
+        </ul>
         </div>
     </div>
-</nav>
-<!-- End of Navigation Bar -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+</div>
+</navbar>
+
+
 </body>
 </html>
