--- a/vibe-acious-babes/and-they-were-roommates.html
+++ b/vibe-acious-babes/and-they-were-roommates.html
@@ -6,8 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Thots that Think</title>
-    <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/resets.css">
+    <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/and-they-were-roommates.css">
 </head>
 
@@ -30,5 +30,6 @@
 </navbar>
 
 
+    <script src="js/ttt.js"></script>
 </body>
 </html>
