added comments for clarity in html, added css for color scheme and aligned links

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -12,24 +12,38 @@
 </head>
 
 <body class="page-wrapper">
+<!--Start of navbar-->
 <header class="container navbar">
-    <div class="row">
+<!--    Start of header options-->
+    <div class="row nav-row">
+<!--        start of logo-->
         <div class="column logo">
             <h1>Audrey's Portfolio</h1>
         </div>
+<!--        End of logo-->
+
+<!--        start of nav-options container-->
         <div class="container nav-options">
         <div class="column links professional">
-            <h2>Professional Links</h2>
+            <h2><a class="link" href="https://www.linkedin.com/in/audrey-tan1127/" target="_blank">
+            Professional Links
+            </a></h2>
         </div>
         <div class="column links social">
-            <h2>Social Media Links</h2>
+            <h2><a class="link" href="https://linktr.ee/first.generasian" target="_blank">
+                Social Media Links</a></h2>
         </div>
         <div class="column links pic-github">
-            <h2>Github Link</h2>
+            <h2><a class="link" href="https://github.com/audreytan1127" target="_blank">
+                Github Link
+            </a></h2>
         </div>
         </div>
+<!--        End of nav-options container-->
     </div>
+<!--    End of header options-->
 </header>
+<!--End of navbar-->
 
 <script src="js/portfolio.js"></script>
 </body>
