created navbar, added bubble divs for background. Need to manipulate bubbles so they are in semi-circle formation

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -2,50 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Audrey Tan's Portfolio</title>
-    <link rel="stylesheet" href="css/resets.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/portfolio.css">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <title>Angel Ortiz's Portfolio</title>
+    <link href="css/resets.css" rel="stylesheet">
+    <link href="css/layout.css" rel="stylesheet">
+    <link href="css/portfolio.css" rel="stylesheet">
 </head>
 
 <body class="page-wrapper">
 <!--Start of navbar-->
 <header class="container navbar">
-<!--    Start of header options-->
+    <!--    Start of header options-->
     <div class="row nav-row">
-<!--        start of logo-->
-        <div class="column logo">
-            <h1>Audrey's Portfolio</h1>
+        <!--        start of artist intro-->
+        <div class="column intro">
+            <h1 class="no-mb">Angel Ortiz Jr.</h1>
+            <h2>Character Designer & Visual Designer</h2>
         </div>
-<!--        End of logo-->
+        <!--        End of artist intro-->
 
-<!--        start of nav-options container-->
+        <!--        start of nav-options container-->
         <div class="container nav-options">
-        <div class="column links professional">
-            <h2><a class="link" href="https://www.linkedin.com/in/audrey-tan1127/" target="_blank">
-            Professional Links
-            </a></h2>
+            <div class="row nav-links">
+                <div class="column nav-item">
+                    <a href="/"><h3>Portfolio</h3></a>
+                </div>
+                <div class="column nav-item">
+                    <a href="/"><h3>About</h3></a>
+                </div>
+                <div class="column nav-item">
+                    <a href="/"><h3>Contact</h3></a>
+                </div>
+                <!--        End of nav-options container-->
+            </div>
         </div>
-        <div class="column links social">
-            <h2><a class="link" href="https://linktr.ee/first.generasian" target="_blank">
-                Social Media Links</a></h2>
-        </div>
-        <div class="column links pic-github">
-            <h2><a class="link" href="https://github.com/audreytan1127" target="_blank">
-                Github Link
-            </a></h2>
-        </div>
-        </div>
-<!--        End of nav-options container-->
     </div>
-<!--    End of header options-->
 </header>
 <!--End of navbar-->
-
-
+<!--Background bubbles! Trying to get them to arch -->
+<div class="bubble-wrapper">
+    <div class="bubble blue">
+    </div>
+    <div class="bubble blue">
+    </div>
+    <div class="bubble blue">
+    </div>
+    <div class="bubble blue">
+    </div>
+    <div class="bubble blue">
+    </div>
+    <div class="bubble blue">
+    </div>
+    <div class="bubble blue">
+    </div>
+    <div class="bubble blue">
+    </div>
+    <div class="bubble blue">
+    </div>
+    <div class="bubble blue">
+    </div>
+</div>
+<!--End of background bubbles bubble-wrapper div-->
 
 <script src="js/portfolio.js"></script>
 </body>
